# pbgui

./: .gitignore  Cargo.toml  Makefile  README.md  pbgui.qrc
etc/: pbgui_preferences.yaml
examples/: vpin_dialog.rs
pbgui/: Cargo.toml  Makefile
pbgui-logger/: Cargo.toml  Makefile
pbgui-logger/examples/: logwin.rs
pbgui-logger/resources/: pbgui_logger.qrc  pbgui_logger.qss
pbgui-logger/src/: inner_log_win.rs  lib.rs  log_win.rs  serialize.rs
pbgui-menubar/: Cargo.toml
pbgui-menubar/src/: lib.rs  menu_bar.rs
pbgui-messaging/: Cargo.toml
pbgui-messaging/examples/: vpin_dialog.rs
pbgui-messaging/src/: client_proxy.rs  event.rs  event_handler.rs  incoming.rs  init.rs  outgoing.rs  thread.rs
pbgui-messaging/src/event/: packages_tree.rs  vpin_dialog.rs
pbgui-messaging/src/event_handler/: main_toolbar_eh.rs  package_withs_eh.rs  packages_tree_eh.rs  vpin_dialog_eh.rs
pbgui-messaging/src/incoming/: imain_toolbar.rs
pbgui-messaging/src/init/: main_toolbar.rs  package_withs.rs  packages_tree.rs  vpin_dialog.rs
pbgui-messaging/src/outgoing/: opackage_withs.rs  ovpin_dialog.rs
pbgui-messaging/src/thread/: main_toolbar.rs
pbgui-toolbar/: Cargo.toml
pbgui-toolbar/examples/: toolbar.rs
pbgui-toolbar/resources/: toolbar.qss
pbgui-toolbar/src/: combo_boxes.rs  lib.rs  line_edit.rs  menu_bar.rs  query_button.rs  toolbar.rs
pbgui-tree/: Cargo.toml  Makefile
pbgui-tree/examples/: pbgui_tree.rs
pbgui-tree/resources/: pbgui_tree.qrc  tree.qss
pbgui-tree/src/: inner_tree.rs  lib.rs  tree.rs
pbgui-vpin/: Cargo.toml
pbgui-vpin/examples/: dialog.rs
pbgui-vpin/resources/: pbgui_vpin.qss
pbgui-vpin/src/: inner_vpin_dialog.rs  lib.rs  vpin_dialog.rs
pbgui-withs/: Cargo.toml  Makefile
pbgui-withs/examples/: withslist.rs
pbgui-withs/resources/: withlist.qrc  withlist.qss
pbgui-withs/src/: inner_withs_list.rs  lib.rs  toolbar.rs  traits.rs  utility.rs  withs_list.rs
pbgui/resources/: pbgui.qrc  pbgui.qss
pbgui/src/: cache.rs  change_type.rs  constants.rs  lib.rs  logger.rs  main.rs  main_window.rs  prefs.rs  traits.rs  utility.rs
pbgui/src/api/: client_proxy.rs  mod.rs
pbgui/src/components/: bottom_context_widget.rs  bottom_stacked_widget.rs  center_widget.rs  left_toolbar.rs  mod.rs  package_withs_list.rs  packages_tree.rs  revisions_table.rs  table_headers.rs  versionpin_changes_row.rs  versionpin_row.rs  versionpin_table_splitter.rs
pbgui/src/components/dist_tree/: api.rs  inner_tree.rs  mod.rs  tree.rs
pbgui/src/io/: mod.rs  packages.rs
pbgui/src/messaging/: client_proxy.rs  event.rs  event_handler.rs  incoming.rs  init.rs  mod.rs  outgoing.rs  thread.rs
pbgui/src/messaging/event/: main_toolbar.rs  main_win.rs  package_withs.rs  packages_tree.rs  ui_logger.rs  vpin_dialog.rs
pbgui/src/messaging/event_handler/: main_toolbar_eh.rs  main_win_eh.rs  package_withs_eh.rs  packages_tree_eh.rs  ui_logger_eh.rs  vpin_dialog_eh.rs
pbgui/src/messaging/incoming/: imain_toolbar.rs  imain_win.rs  ipackage_withs.rs  ipackages_tree.rs  iui_logger.rs  ivpin_dialog.rs
pbgui/src/messaging/init/: main_toolbar.rs  package_withs.rs  packages_tree.rs  vpin_dialog.rs
pbgui/src/messaging/outgoing/: omain_toolbar.rs  omain_win.rs  opackage_withs.rs  opackages_tree.rs  oui_logger.rs  ovpin_dialog.rs
pbgui/src/messaging/thread/: main_toolbar.rs  main_win.rs  package_withs.rs  packages_tree.rs  ui_logger.rs  vpin_dialog.rs
pbgui/src/slot_functions/: choose_distribution.rs  mod.rs  save_packages_xml.rs  save_versionpin_changes.rs  select_history.rs  store_withpackage_changes.rs  update_changes_table.rs  update_versionpin_table.rs  update_withpackages.rs
resources/: pbgui.qrc  pbgui.qss
src/: cache.rs  change_type.rs  constants.rs  inner_main_window.rs  lib.rs  main.rs  main_window.rs  parent_form.rs  search_bar.rs  search_comboboxes.rs  traits.rs  utility.rs  versionpin_changes_table.rs  versionpin_table.rs
src/components/: bottom_context_widget.rs  bottom_stacked_widget.rs  center_widget.rs  changes_table.rs  distribution_dialog.rs  left_toolbar.rs  main_menu_bar.rs  mod.rs  package_lineedit.rs  package_withs_list.rs  packages_tree.rs  revisions_table.rs  search_bar.rs  search_comboboxes.rs  table_headers.rs  versionpin_changes_row.rs  versionpin_changes_table.rs  versionpin_row.rs  versionpin_table.rs  versionpin_table_splitter.rs  withpackage_widget.rs  withs_splitter.rs
src/components/top/: mod.rs  package_lineedit.rs  query_button.rs  search_comboboxes.rs  toolbar.rs
src/slot_functions/: choose_distribution.rs  mod.rs  save_versionpin_changes.rs  select_history.rs  store_withpackage_changes.rs  update_changes_table.rs  update_versionpin_table.rs  update_withpackages.rs
stylesheet/: pbgui.qss
