[package]
name = "pbgui"
version = "0.27.0"
authors = ["jgerber <jlgerber@gmail.com>"]
edition = "2018"

[dependencies]
packybara = {git= "https://github.com/jlgerber/packybara", tag="v0.31.1"}
qt_thread_conductor = {git= "https://github.com/jlgerber/rust-qt-conductor", tag="v0.3.0"}
listitem = {git= "https://github.com/jlgerber/listview", tag="v0.11.0"}
qt_core = "~0.4.1"
qt_gui = "~0.4.1"
qt_widgets = "~0.4.1"
qt_ui_tools = "~0.4.1"
whoami = "~0.7.0"
log = "~0.4.8"
env_logger = "~0.7.1"
structopt = "~0.3.7"
num_enum = "~0.4.2"
strum = "~0.17.1"
strum_macros = "~0.17.1"
pbgui-toolbar = {git="https://github.com/jlgerber/pbgui-toolbar", tag="v0.3.3"}
pbgui-tree = {git="https://github.com/jlgerber/pbgui-tree", tag="v0.7.2"}