[package]
name = "pbgui-logger"
version = "0.7.0"
authors = ["jlgerber <jlgerber@gmail.com>"]
edition = "2018"

[dependencies]
qt_core = "~0.4.1"
qt_gui = "~0.4.1"
qt_widgets = "~0.4.1"
qt_ui_tools = "~0.4.1"
log = "~0.4.8"
chrono = "0.4.10"
lazy_static = "1.4.0"
rustqt-utils = {git = "https://github.com/jlgerber/rustqt-utils", tag="v0.6.0"}
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.45"