[package]
name = "pbgui-messaging"
version = "0.13.0"
authors = ["jlgerber <jlgerber@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
packybara = {git= "https://github.com/jlgerber/packybara", tag="v0.32.0"}
qt_thread_conductor = {git= "https://github.com/jlgerber/rust-qt-conductor", tag="v0.3.0"}
rustqt-utils = {git="https://github.com/jlgerber/rustqt-utils", tag="v0.6.0"}
crossbeam = "0.7.3"
crossbeam-utils = "0.7.0"
crossbeam-channel = "0.4.0"
qt_core = "~0.4.1"
qt_gui = "~0.4.1"
qt_widgets = "~0.4.1"
qt_ui_tools = "~0.4.1"
env_logger = "0.7.1"

#pbgui-vpin = {git="https://github.com/jlgerber/pbgui-vpin", tag="v0.8.0"}
pbgui-vpin = {path="../pbgui-vpin"}

#pbgui-tree = {git="https://github.com/jlgerber/pbgui-tree", tag="v0.11.1"}
pbgui-tree = {path = "../pbgui-tree"}

#pbgui-withs = {git="https://github.com/jlgerber/pbgui-withs", tag="v0.18.0"}
pbgui-withs = {path="../pbgui-withs"}

#pbgui-toolbar = {git="https://github.com/jlgerber/pbgui-toolbar", tag="v0.8.0"}
pbgui-toolbar = {path="../pbgui-toolbar"}

pbgui = {path = "../pbgui"}


