[package]
name = "pbgui-toolbar"
version = "0.8.0"
authors = ["jlgerber <jlgerber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qt_core = "0.4.1"
qt_gui = "0.4.1"
qt_widgets = "0.4.1"
qt_ui_tools = "0.4.1"
whoami = "0.7.0"
log = "0.4.8"
rustqt-utils = {git="https://github.com/jlgerber/rustqt-utils", tag="v0.6.0"}
packybara = {git= "https://github.com/jlgerber/packybara", tag="v0.32.0"}
