[package]
name = "pbgui"
version = "0.65.0"
authors = ["jgerber <jlgerber@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam = "0.7.3"
crossbeam-channel = "0.4.0"
crossbeam-utils = "0.7.0"
env_logger = "~0.7.1"
log = "~0.4.8"
main_error = "0.1.0"
num_enum = "~0.4.2"
packybara = {git= "https://github.com/jlgerber/packybara", tag="v0.41.1"}
pbgui-logger = {path="../pbgui-logger"}
pbgui-menubar = {path="../pbgui-menubar"}
pbgui-toolbar = {path="../pbgui-toolbar"}
pbgui-vpin = {path="../pbgui-vpin"}
pbgui-withs = {path= "../pbgui-withs"}
preferences = {git = "https://github.com/jlgerber/rustypreferences", tag="v0.14.1"}
qt_core = "~0.4.1"
qt_gui = "~0.4.1"
qt_thread_conductor = {git= "https://github.com/jlgerber/rust-qt-conductor", tag="v0.3.1"}
qt_ui_tools = "~0.4.1"
qt_widgets = "~0.4.1"
rustqt-utils = {git = "https://github.com/jlgerber/rustqt-utils", tag="v0.7.0"}
serde = {version ="1.0.104", features = ["derive"]}
simple_xml_serialize =  "0.2.3"
simple_xml_serialize_macro = { version = "0.2.1", features = ["process_options"] }
structopt = "0.3.9"
strum = "~0.17.1"
strum_macros = "~0.17.1"
whoami = "~0.7.0"
